--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,18 @@
         </div>
     </div>
 
+    <div class="result">
+    {% if news %}
+        <h2>Новости:</h2>
+        <ul>
+            {% for article in news %}
+                <li><a href="{{ article['url'] }}">{{ article['title'] }}</a></li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    </div>
+
+
     <!-- Подключение Bootstrap JS и зависимостей -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
